--- a/login flow using Bootstrap and jQuery/testimganimation.css
+++ b/login flow using Bootstrap and jQuery/testimganimation.css
@@ -30,7 +30,7 @@ section {
 	color: white;
 }
 .mainheader a:nth-child(3) {
-	background-color: red;
+	background-color: blue;
 }
 .mainheader, .inputlist {
 	margin-top: 50px;
