--- a/login flow using Bootstrap and jQuery/boot.css
+++ b/login flow using Bootstrap and jQuery/boot.css
@@ -42,6 +42,6 @@ footer {
 	color: #fff;
 }
 body {
-	background-image: url(F:\nature.jpg);
+	background-image: url(./nature.jpg);
 	background-size: cover;
 }
